# classic-RL

./: .gitignore  pyproject.toml
dqn_project/: README.md  __init__.py  agent.py  configs.py  custom_envs.py  dqn_walkthrough.ipynb  evaluate.py  model.py  replay_buffer.py  train.py  utils.py
ppo_minigrid/: README.md  buffer.py  config.py  envs.py  eval.py  models.py  ppo.py  train.py  utils.py
ppo_minigrid/outputs/: metrics.json
tabular_rl_cliffwalking/: README.md  agents.py  env.py  eval.py  pyproject.toml  train.py  utils.py
tabular_rl_cliffwalking/latex/: learn.aux  learn.fdb_latexmk  learn.fls  learn.tex
tabular_rl_cliffwalking/outputs/qlearning/: metrics.json  q_table.npy
tabular_rl_cliffwalking/outputs/sarsa/: metrics.json  q_table.npy
tabular_rl_cliffwalking/sanity/qlearning/: metrics.json  q_table.npy
tabular_rl_cliffwalking/sanity/sarsa/: metrics.json  q_table.npy
