[project]
name = "classic-rl"
version = "0.1.0"
description = "Shared Python environment for classic RL projects"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,classic-control]>=1.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.7.0",
]

[tool.uv]
package = false
