[project]
name = "classic-rl"
version = "0.1.0"
description = "Shared Python environment for classic RL projects"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,classic-control]>=1.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "minigrid>=2.3.1",
    "torch==2.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true 

[tool.uv]
package = false
